[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/Resource/Jetpack3.png" type="Texture" id=1]
[ext_resource path="res://Asset/Resource/Jetpack.png" type="Texture" id=2]
[ext_resource path="res://Asset/Resource/忍者.png" type="Texture" id=3]
[ext_resource path="res://Asset/Resource/Jetpack2.png" type="Texture" id=4]
[ext_resource path="res://Asset/Scripts/忍者.gd" type="Script" id=5]
[ext_resource path="res://Asset/Resource/粒子.png" type="Texture" id=6]
[ext_resource path="res://Asset/Resource/声音/death.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 19 )

[sub_resource type="Curve" id=3]
max_value = 2.0
_data = [ Vector2( 0, 1.52727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0183486, 1 )
colors = PoolColorArray( 0.764891, 0.273682, 0.921875, 1, 0.921875, 0.846365, 0.0432129, 0.294118 )

[node name="忍者" type="Area2D"]
scale = Vector2( 2, 2 )
collision_mask = 6
priority = 5.0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -64, 0 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -79, 10.5 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -64, 0 )
shape = SubResource( 2 )

[node name="SFX_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="VFX_hurt" type="CPUParticles2D" parent="."]
position = Vector2( -64, 0.5 )
emitting = false
one_shot = true
explosiveness = 1.0
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 11.38
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.7
angular_velocity = 360.0
angular_velocity_random = 0.5
damping = 29.73
scale_amount = 2.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[connection signal="area_entered" from="." to="." method="_on__area_entered"]
